--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "jsonwebtoken": "8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
