Testes para todos os endpoints do Router de Users

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "joi": "^17.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
+    "mongodb-memory-server": "^7.2.1",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
