--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
+    "express-router": "0.0.1",
     "frisby": "2.1.2",
     "jest": "26.4.1",
+    "joi": "^17.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
