--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chai-http": "4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
+    "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.12",
     "nyc": "15.1.0",
     "sinon": "11.1.1"
