--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/api/server.js",
   "scripts": {
     "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "start": "node .",
+    "start": "nodemon api.js",
     "dev": "nodemon .",
     "dev:test": "mocha ./src/integration-tests/**/*$NAME*.{test,spec}.js --exit",
     "dev:test:coverage": "nyc --all npm run dev:test",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/tryber/sd-0x-cookmaster-v2#readme",
   "dependencies": {
-    "body-parser": "1.19.0",
+    "body-parser": "^1.19.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
@@ -33,7 +33,6 @@
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
-    "nodemon": "2.0.4",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
@@ -41,6 +40,7 @@
     "chai-http": "4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
+    "nodemon": "^2.0.12",
     "nyc": "15.1.0",
     "sinon": "11.1.1"
   }
