--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/api/server.js",
   "scripts": {
     "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "start": "node .",
-    "dev": "nodemon .",
+    "start": "node ./src/api/server.js",
+    "dev": "nodemon ./src/api/server.js",
     "dev:test": "mocha ./src/integration-tests/**/*$NAME*.{test,spec}.js --exit",
     "dev:test:coverage": "nyc --all npm run dev:test",
     "dev:test:coverage:json": "nyc --all --reporter=json-summary npm run dev:test",
@@ -24,15 +24,16 @@
   },
   "homepage": "https://github.com/tryber/sd-0x-cookmaster-v2#readme",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "express-rescue": "1.1.30",
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
-    "multer": "1.4.2",
+    "multer": "^1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
   },
