Feat - Requisitos 01 - Crie um endpoint para o cadastro de usuários

--- a/.gitignore
+++ b/.gitignore
@@ -257,6 +257,7 @@ dist
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+.editorconfig
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
