--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
-    "multer": "1.4.2",
+    "multer": "^1.4.2",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
