--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "26.4.1",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mongod": "^2.0.0",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
