--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
