--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "homepage": "https://github.com/tryber/sd-0x-cookmaster-v2#readme",
   "dependencies": {
     "body-parser": "1.19.0",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
     "frisby": "2.1.2",
     "jest": "26.4.1",
+    "joi": "^13.7.0",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
@@ -41,6 +42,7 @@
     "chai-http": "4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
+    "mongodb-memory-server": "^6.9.6",
     "nyc": "15.1.0",
     "sinon": "11.1.1"
   }
