--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongodb": "3.5.9",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
+    "path": "^0.12.7",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
