--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "express-rescue": "1.1.30",
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
-    "multer": "1.4.2",
+    "multer": "^1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
   },
