--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
+    "node": "^16.5.0",
     "nodemon": "2.0.4",
+    "ops": "^0.0.1",
+    "ops-node": "^1.0.0",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
