--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jest": "26.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
-    "multer": "1.4.2",
+    "multer": "^1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
   },
