Requirement eleven - testing above 30 percent

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
+    "mongodb-memory-server": "^6.9.6",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
