--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-rescue": "1.1.30",
     "frisby": "2.1.2",
     "jest": "26.4.1",
+    "joi": "^17.4.2",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
@@ -41,6 +42,7 @@
     "chai-http": "4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
+    "mongodb-memory-server": "^6.9.6",
     "nyc": "15.1.0",
     "sinon": "11.1.1"
   }
