--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/tryber/sd-0x-cookmaster-v2#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
+    "express-router": "0.0.1",
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "joi": "^14.0.4",
