--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "shelljs": "0.8.4"
   },
   "devDependencies": {
-    "chai": "4.3.4",
-    "chai-http": "4.3.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
     "nyc": "15.1.0",
