--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "eslint-config-trybe-backend": "^1.0.4",
     "mocha": "9.0.0",
     "nyc": "15.1.0",
-    "sinon": "11.1.1"
+    "sinon": "^11.1.1"
   }
 }
