--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
-    "mocha": "9.0.0",
+    "mocha": "^9.0.0",
     "nyc": "15.1.0",
     "sinon": "^11.1.1"
   }
