--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "express": "^4.17.1",
     "express-rescue": "1.1.30",
     "frisby": "2.1.2",
-    "jest": "26.4.1",
+    "jest": "^26.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.5.9",
+    "mongodb-memory-server": "^7.3.6",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
