--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/api/server.js",
   "scripts": {
     "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "dev-tests": "mocha ./src/integration-tests/**/*$NAME*.test.js --exit",
     "start": "node .",
     "dev": "nodemon .",
     "dev:test": "mocha ./src/integration-tests/**/*$NAME*.{test,spec}.js --exit",
@@ -33,16 +34,17 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
+    "mongodb-memory-server": "^7.3.6",
     "multer": "^1.4.2",
     "nodemon": "2.0.4",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
-    "chai": "4.3.4",
-    "chai-http": "4.3.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint-config-trybe-backend": "^1.0.4",
-    "mocha": "9.0.0",
+    "mocha": "^9.0.0",
     "nyc": "15.1.0",
-    "sinon": "11.1.1"
+    "sinon": "^11.1.1"
   }
 }
